<resources>
    <string name="app_name">iBook</string>

    <string name="nameText">Book Name</string>
    <string name="authorText">Author</string>
    <string name="dateText">Date</string>
    <string name="photoText">Photo</string>
    <string name="isbnText">ISBN</string>
    <string name="descriptionText">Description</string>
    <string name="editButton">Edit</string>
    <string name="deleteButton">Delete</string>


    <string name="title_home">Home</string>
    <string name="title_user">User</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_booklist">Book List</string>
    <string name="title_topic">Topic</string>

</resources>