<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_topic"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_topic" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_booklist"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_booklist" />
    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_user" />

</menu>